--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ div.sidebar > div
     background-color: #B0B0FF;
 }
 
+.red-box {
+    border: 2px solid #F55;
+    background-color: #FFB0B0;
+}
+
 div.unit-info
 {
     padding: 5px;
