--- a/style.css
+++ b/style.css
@@ -11,20 +11,39 @@ div.game-wrapper
 
 canvas
 {
+    float: left;
 }
 
 div.sidebar
 {
     width: 175px;
     float: left;
-    margin-right: 10px;
 }
 
 div.sidebar > div
 {
     margin-bottom: 10px;
-    float: right;
     clear: both;
+}
+
+div.left-sidebar
+{
+    margin-right: 10px;
+}
+
+div.right-sidebar
+{
+    margin-left: 10px;
+}
+
+div.left-sidebar > div
+{
+    float: right;
+}
+
+div.right-sidebar > div
+{
+    float: left;
 }
 
 .blue-box {
@@ -35,6 +54,11 @@ div.sidebar > div
 .red-box {
     border: 2px solid #F55;
     background-color: #FFB0B0;
+}
+
+.neutral-box {
+    border: 2px solid #090;
+    background-color: #BEB;
 }
 
 div.unit-info
@@ -49,15 +73,22 @@ div.menu
     display: none;
 }
 
-div.menu div
+div.menu ul
 {
-    padding: 4px;
-    padding-left: 6px;
+    margin: 0;
+    padding: 0;
 }
 
-div.menu div.selected
+div.menu li
 {
-    background-color: #77F;
+    list-style-image: url('images/list_blank.png');
+    list-style-position: inside;
+    padding: 2px;
+}
+
+div.menu li.selected
+{
+    list-style-image: url('images/list_arrow.png');
 }
 
 div.battle-stats-panel
@@ -74,4 +105,9 @@ div.battle-stats-panel
 {
     display: inline-block;
     margin: 3px;
+}
+
+div.victory-condition
+{
+    padding: 5px;
 }
