Style the battle stats panel

--- a/style.css
+++ b/style.css
@@ -47,18 +47,18 @@ div.right-sidebar > div
 }
 
 .blue-box {
-    border: 2px solid #55F;
+    border: 1px solid #22F;
     background-color: #B0B0FF;
 }
 
 .red-box {
-    border: 2px solid #F55;
+    border: 1px solid #F22;
     background-color: #FFB0B0;
 }
 
 .neutral-box {
-    border: 2px solid #090;
-    background-color: #BEB;
+    border: 1px solid #666;
+    background-color: #DDD;
 }
 
 div.unit-info
@@ -94,6 +94,53 @@ div.menu li.selected
 div.battle-stats-panel
 {
     display: none;
+    text-align: right;
+}
+
+div.battle-stats-panel table
+{
+    border-spacing: 0;
+}
+
+div.battle-stats-panel .attacker-name
+{
+    border-bottom-style: none;
+}
+
+div.battle-stats-panel .attacker-hit
+{
+    border-style: none solid none none;
+}
+
+div.battle-stats-panel .attacker-dmg
+{
+    border-style: none solid solid none;
+}
+
+div.battle-stats-panel .defender-name
+{
+    text-align: left;
+    border-top-style: none;
+}
+
+div.battle-stats-panel .defender-hit
+{
+    border-style: solid none none solid;
+}
+
+div.battle-stats-panel .defender-dmg
+{
+    border-style: none none none solid;
+}
+
+div.battle-stats-panel .hit
+{
+    border-bottom-style: none;
+}
+
+div.battle-stats-panel .dmg
+{
+    border-top-style: none;
 }
 
 .battle-unit-info-container
