--- a/style.css
+++ b/style.css
@@ -104,6 +104,28 @@ div.unit-info
     visibility: hidden;
 }
 
+div.unit-info .hp-bar
+{    
+    float: right;
+    width: 90px;
+    height: 7px;
+    margin: 2px 2px 0px 2px;
+    background-color: black;
+}
+
+div.unit-info .hp-bar-filled
+{
+    height: 5px;
+    border: 1px solid black;
+    background: linear-gradient(to right, #0B0, #0E0);
+}
+
+div.unit-info .hp-text
+{
+    font-size: 9pt;
+    text-align: right;
+}
+
 div.menu  
 {
     padding: 4px;
@@ -219,4 +241,12 @@ div.message .victory-message
     color: blue;
     font-size: 12pt;
     font-weight: bold;
+}
+
+div.message .defeat-message
+{
+    display: none;
+    font-size: 12pt;
+    font-weight: bold;
+    color: #B00
 }
