--- a/unit_info_window.css
+++ b/unit_info_window.css
@@ -1,8 +1,24 @@
+.dark-overlay
+{
+    display: none;
+    position: absolute; 
+    left: 0%;
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    opacity: .4;
+    background-color: black;
+}
+
 .unit-info-window 
 {
-    display: inline-block;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
     overflow: hidden;
     padding: 4px;
+    z-index: 10;
 }
 
 .unit-info-window .common
@@ -15,6 +31,13 @@
 .unit-info-window .common img
 {
     border: 1px solid black;
+}
+
+.unit-info-window .common .lord 
+{
+    font-size: 9pt;
+    float: right;
+    padding-top: 2px;
 }
 
 .unit-info-window .tab-container
