unit-info-window: change tabs

--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -48,6 +48,11 @@
     width: 200px;
 }
 
+.unit-info-window .tab-container .labels .tab-id
+{
+    display: none;
+}
+
 .unit-info-window .tab-container .labels > div
 {
     border: 1px solid #666;
