Add insignia for enemy team

--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -34,6 +34,14 @@
     background: radial-gradient(#AAA, #666);
 }
 
+
+.unit-info-window .common .insignia img
+{
+    border: none;
+    background: none;
+    margin: 15px 0;
+}
+
 .unit-info-window .common .lord 
 {
     font-size: 9pt;
