Change red box color

--- a/css/main.css
+++ b/css/main.css
@@ -100,8 +100,8 @@ div.right-sidebar > div
 }
 
 .red-box {
-    border: 1px solid #F22;
-    background-color: #FFB0B0;
+    border: 1px solid #822;
+    background-color: #F88;
 }
 
 .neutral-box {
