--- a/css/unit_info_box.css
+++ b/css/unit_info_box.css
@@ -22,6 +22,13 @@ div.unit-info .not-image
     padding: 4px;
 }
 
+div.unit-info .equipped 
+{
+    width: 20px;
+    float: right;
+    margin: -3px -3px 0 0;
+}
+
 div.unit-info .bar
 {    
     float: right;
