--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -14,7 +14,7 @@
 {
     visibility: hidden;
     position: absolute;
-    top: 0;
+    top: 100px;
     left: 0;
     overflow: hidden;
     padding: 4px;
