--- a/css/main.css
+++ b/css/main.css
@@ -109,8 +109,6 @@ div.right-sidebar > div
     background-color: #DDD;
 }
 
-
-
 .battle-unit-info-container
 {
     position: absolute;
@@ -129,30 +127,34 @@ div.victory-condition
 
 div.message
 {
-    margin-bottom: 4px;
-    height: 14pt;
-}
-
-div.message .phase-message
-{
-    display: none;
-    font-size: 12pt;
+    position: absolute;
+    visibility: hidden;
+    z-index: 10;
+    
+    background-color: rgba(255,255,255,.3);
+    padding: 10px 10px;
+    border-radius: 20px;
+    
+    font-size: 14pt;
     font-weight: bold;
 }
-div.message .victory-message
+
+div.canvas-dark-overlay 
 {
     display: none;
+    position: absolute; 
+    background-color: black;
+    opacity: .4;
+}
+
+.victory-message
+{
     color: blue;
-    font-size: 12pt;
-    font-weight: bold;
 }
 
-div.message .defeat-message
+.defeat-message
 {
-    display: none;
-    font-size: 12pt;
-    font-weight: bold;
-    color: #B00
+    color: #C00;
 }
 
 div.battle-message 
