--- a/css/battle_stats_panel.css
+++ b/css/battle_stats_panel.css
@@ -19,6 +19,11 @@ div.battle-stats-panel img.weapon
     width: 13pt;
 }
 
+div.battle-stats-panel img.weapon-arrow
+{
+    width: 12px;
+}
+
 div.battle-stats-panel .atk-name
 {
     border-bottom-style: none;
@@ -27,6 +32,12 @@ div.battle-stats-panel .atk-name
 div.battle-stats-panel .atk-name img.weapon
 {
     margin: 1px 1px 0px 4px;
+    float: right;
+}
+
+div.battle-stats-panel .atk-name img.weapon-arrow
+{
+    margin: 1px 1px 0 0px;
     float: right;
 }
 
@@ -54,6 +65,12 @@ div.battle-stats-panel .def-name
 div.battle-stats-panel .def-name img.weapon
 {
     margin: 0px 4px 3px 1px;
+    float: left;
+}
+
+div.battle-stats-panel .def-name img.weapon-arrow
+{
+    margin: 2px 1px 0 0px;
     float: left;
 }
 
