--- a/css/battle_stats_panel.css
+++ b/css/battle_stats_panel.css
@@ -14,6 +14,11 @@ div.battle-stats-panel td
    padding: 1px 3px;
 }
 
+div.battle-stats-panel .atk-name span, div.battle-stats-panel .def-name span
+{
+    font-size: 9pt;
+}
+
 div.battle-stats-panel img.weapon
 {
     width: 13pt;
@@ -27,6 +32,7 @@ div.battle-stats-panel img.weapon-arrow
 div.battle-stats-panel .atk-name
 {
     border-bottom-style: none;
+    text-align: left;
 }
 
 div.battle-stats-panel .atk-name img.weapon
