--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -1,7 +1,7 @@
 .dark-overlay
 {
     display: none;
-    position: absolute; 
+    position: fixed; 
     left: 0%;
     top: 0%;
     width: 100%;
