--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -1,4 +1,4 @@
-.dark-overlay
+.viewport-overlay
 {
     display: none;
     position: fixed; 
@@ -14,8 +14,6 @@
 {
     visibility: hidden;
     position: absolute;
-    top: 100px;
-    left: 0;
     overflow: hidden;
     padding: 4px;
     z-index: 10;
