--- a/css/trade_window.css
+++ b/css/trade_window.css
@@ -30,8 +30,21 @@
     padding: 2px 5px;
 }
 
-.trade-window .inventory .item-element
+.trade-window .inventory .arrow-image
+{
+    width: 9px;
+    height: 9px;
+    float: left;
+    padding: 0;
+    margin: 4px 5px 0px 2px;
+    
+    background-image: url('../images/list_arrow.png');
+    visibility: hidden;
+}
+
+.trade-window .inventory .item-container
 {
     margin: 4px 0;
+    height: 18px;
 }
 
