--- a/css/trade_window.css
+++ b/css/trade_window.css
@@ -19,6 +19,7 @@
 .trade-window .top img
 {
     width: 80px;
+    height: 100px;
     margin: 0 50px;
     border: 1px solid rgba(200, 200, 200, .3);
     border-bottom: none;
@@ -40,6 +41,11 @@
     
     background-image: url('../images/list_arrow.png');
     visibility: hidden;
+}
+
+.trade-window .inventory .arrow-image.cursor-at
+{
+    visibility: visible;
 }
 
 .trade-window .inventory .item-container
