--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -97,7 +97,8 @@
     height: 115px;
 }
 
-.unit-info-window .inventory, .unit-info-window .tab-content-stats .stats
+.unit-info-window .inventory, .unit-info-window .tab-content-stats .stats,
+.unit-info-window .tab-content-skills .skills
 {
     border: 2px solid #007A29;
     background-color: #BEB;
