--- a/css/unit_info_window.css
+++ b/css/unit_info_window.css
@@ -187,19 +187,19 @@
     margin-top: 2px
 }
 
+/***** SKILLS TAB *****/
 .unit-info-window .tab-content-skills .skills
 {
     height: 180px;
 }
 
-.unit-info-window .tab-content-skills .skill
+.unit-info-window .tab-content-skills .skills td
 {
-    display: inline-block;
-    padding: 5px;
+    padding: 3px 5px;
     height: 35px;
 }
 
-.unit-info-window .tab-content-skills .skill img
+.unit-info-window .tab-content-skills .skills img
 {
     width: 35px;
 }
