--- a/css/skills.css
+++ b/css/skills.css
@@ -10,6 +10,23 @@
     border: 1px solid rgba(0, 0, 255, .35);
 }
 
+.sidebar .skills-box
+{
+    width: 170px;
+    display: none;
+    padding: 2px 0;
+}
+
+.sidebar .skills-box img
+{
+    width: 35px;
+}
+
+.sidebar .skills-box td
+{
+    padding: 1px 3px;
+}
+
 /***** SKILL INFO BOX *****/
 .skill-info-box
 {
