--- a/css/main.css
+++ b/css/main.css
@@ -109,17 +109,20 @@ div.right-sidebar > div
     float: left;
 }
 
-.blue-box {
+.blue-box 
+{
     border: 1px solid #22F;
     background-color: #B0B0FF;
 }
 
-.red-box {
+.red-box 
+{
     border: 1px solid #822;
     background-color: #F88;
 }
 
-.neutral-box {
+.neutral-box 
+{
     border: 1px solid #666;
     background-color: #DDD;
 }
@@ -138,6 +141,22 @@ div.right-sidebar > div
 {
     float: left;
     margin: 3px;
+}
+
+.unit-action-container 
+{
+    position: absolute;
+    z-index: 10;
+}
+
+.unit-action-container .unit-info
+{
+    overflow: hidden;
+}
+
+.action-message
+{
+    position: absolute;
 }
 
 div.victory-condition
