--- a/css/unit_info_box.css
+++ b/css/unit_info_box.css
@@ -7,8 +7,14 @@ div.unit-info .image-wrapper
 {
     float: left;
     height: 75px;
-    border-right: 1px solid black;
+    border: 1px none #00B;
+    border-right-style: solid;
     background: radial-gradient(#AAF, #66E);
+}
+
+.unit-info.show-status .image-wrapper
+{
+    border-bottom-style: solid;
 }
 
 div.unit-info img 
@@ -59,4 +65,29 @@ div.unit-info .bar-text
     font-size: 9pt;
     text-align: right;
     clear: both;
+}
+
+/***** STATUS LIST *****/
+.unit-info .status-container
+{
+    clear: both;
+}
+
+.unit-info .status-container .status
+{
+    padding: 4px;
+    overflow: hidden;
+}
+
+.unit-info .status-container .status img
+{
+    width: 20px;
+    float: left;
+}
+
+.unit-info .status-container .status span
+{
+    float: left;
+    font-size: 10pt;
+    padding: 2px 0 0 2px;
 }
