--- a/css/skills.css
+++ b/css/skills.css
@@ -58,7 +58,7 @@
 }
 
 .skill-info-box.not-usable .heading span,
-.skill-info-box.not-usable .usage .mp
+.skill-info-box.not-usable .stats .mp
 {
     color: #A00;
 }
