--- a/css/game.css
+++ b/css/game.css
@@ -9,12 +9,13 @@ div.wrapper
 {
     width: 800px;
     margin: 0 auto;
+    padding-top: 15px;
 }
 
 div.game-wrapper
 {
-    padding: 15px 0 0;
-    height: 390px;
+    display: none;
+    height: 400px;
 }
 
 div.canvas-container
@@ -39,7 +40,7 @@ canvas
 
 div.game-info
 {
-    margin-bottom: 25px;
+    margin: 25px 0;
 }
 
 div.game-info h3
@@ -208,6 +209,7 @@ div.battle-message.crit
 div.victory-condition
 {
     padding: 5px;
+    display: none;
 }
 
 div.message
