--- a/css/vn.css
+++ b/css/vn.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
     position: relative;
     display: none;
+    background-color: #191919;
 }
 
 .vn-wrapper .background
@@ -14,11 +15,6 @@
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.vn-wrapper .background.dark
-{
-    background-color: #191919;
 }
 
 .vn-wrapper .full-textbox
@@ -51,4 +47,31 @@
     vertical-align: -1px;
     margin-left: 10px;
     opacity: .75;
+}
+
+.vn-wrapper .chapter-display
+{
+    display: none;   
+    position: absolute;
+    width: 530px;
+    left: 50px;
+    top: 280px;
+    padding: 10px 20px 10px 0;
+    
+    text-align: right;   
+    background: linear-gradient(to left, rgba(30, 30, 30, .8), 
+        rgba(30, 30, 30, .8), rgba(0, 0, 0, 0));
+    color: white;
+}
+
+.vn-wrapper .chapter-display .main
+{
+    font-size: 14pt;
+    font-weight: bold;
+    color: #999;
+}
+
+.vn-wrapper .chapter-display .name
+{
+    font-size: 12pt;
 }
