--- a/css/start.css
+++ b/css/start.css
@@ -1,6 +1,13 @@
 .start-menu-container
 {
     position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.start-menu-container .items
+{
+    position: absolute;
     top: 100px;
     padding-left: 20px;
     width: 250px;
