--- a/css/vn.css
+++ b/css/vn.css
@@ -8,15 +8,6 @@
     background-color: #191919;
 }
 
-.vn-wrapper .background
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
 /***** FULL TEXTBOX *****/
 .vn-wrapper .full-textbox
 {
@@ -53,7 +44,14 @@
 /***** CHAPTER DISPLAY *****/
 .vn-wrapper .chapter-display
 {
-    display: none;   
+    display: none; 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.vn-wrapper .chapter-display .title
+{ 
     position: absolute;
     width: 530px;
     left: 50px;
@@ -83,6 +81,8 @@
 {
     position: absolute;
     display: none;
+    width: 100%;
+    height: 100%;
 }
 
 .vn-wrapper .chatbox
@@ -104,7 +104,8 @@
     height: 110px;
     width: 87px;
     
-    border: 1px solid rgba(255, 255, 255, .7);
+    background-color: rgba(255, 255, 255, .5);
+    border: 1px solid rgba(255, 255, 255, .5);
     border-width: 1px 1px 0 0;
 }
 
@@ -112,7 +113,6 @@
 {
     height: 109px;
     width: 87px;
-    background-color: rgba(255, 255, 255, .3);
 }
 
 .vn-wrapper .chatbox .unit .name
@@ -123,8 +123,10 @@
     font-size: 9pt;
     padding: 0 2px;
     
-    background-color: rgba(255, 255, 255, .5);
-    border: 1px solid rgba(255, 255, 255, .2);
+    background-color: rgba(75,75,75, .6);
+    border: 1px solid rgba(255, 255, 255, .4);
+    border-width: 1px 1px 0 0;
+    color: white;
 }
 
 .vn-wrapper .chatbox .text
@@ -137,6 +139,7 @@
     width: 512px;
     padding: 10px;
     
-    background-color: rgba(255, 255, 255, .5);
-    border-top: 1px solid rgba(255, 255, 255, .4);
+    background-color: rgba(255, 255, 255, .3);
+    border-top: 1px solid rgba(255, 255, 255, .2);
+    color: white;
 }
